# Edge-Glass

./: .gitignore  FINAL_STATUS.md  IMPLEMENTATION_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  check_libs.py  edge_glass_structure.txt  log_results.txt  requirements.lock.txt  requirements.top.txt  requirements.txt
code_base/v3_code_base/: pyproject.toml
edge_glass_modular/: COMPLETE_CODEBASE.md  IMPLEMENTATION_SUMMARY.md  PIXMO_INTEGRATION_GUIDE.md  README.md  SETUP_AND_RUN.md  debug_eval_repro.py  pyproject.toml  result.txt
edge_glass_modular/configs/: base_alignment.yaml  no_trm_vlm_qa_qwen2.5-3b_regularized.yaml  perceiver_mrl_alignment.yaml  pixmo_alignment.yaml  trimodal_qwen.yaml  trm_vlm_qa.yaml  trm_vlm_qa_qwen1.5.yaml  trm_vlm_qa_qwen1.8_eval.yaml  trm_vlm_qa_qwen2.5-3b.yaml  trm_vlm_qa_qwen2.5-3b_regularized.yaml  vision_audio_text_alignment.yaml
edge_glass_modular/notebooks/: 01_pixmo_vision_text_alignment.ipynb  01_vision_text_alignment.ipynb  02_perceiver_mrl_vision_text_alignment.ipynb  02_pixmo_vision_text_alignment.ipynb  03_trm_vlm_qa_training.ipynb  03_trm_vlm_qa_training_FIXED.ipynb  03_trm_vlm_qa_training_MODULAR.ipynb  03_trm_vlm_qa_training_no_TRM.ipynb  04_alignment_evaluation.ipynb  04_pixmo_dataset_eda.ipynb  04_vlm_qa_evaluation.ipynb  05_alignment_evaluation.ipynb  05_vlm_qualitative_inference.ipynb  07_alignment_final_report.ipynb  EVALUATION_README.md  EVALUATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PERCEIVER_TRAINING_ISSUE_ANALYSIS.md  QUICK_START.md  REFACTORING_SUMMARY.md  TRM_VLM_QA_MODULAR_README.md  TRM_VLM_README.md  merge_notebooks.py  modify_notebook.py  modify_notebook_v2.py  (+5 more)
(+616 files in other folders)
